feat: add durable VM snapshots